[package]
name = "current-song-2"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Display the currently playing song/audio."
keywords = ["overlay", "obs", "stream"]
authors = ["Nerixyz"]
repository = "https://github.com/Nerixyz/current-song2"
categories = ["multimedia"]                               # TODO: find something more fitting

[workspace]
members = [".", "lib/win-gsmtc", "lib/win-wrapper"]

[features]
# When enabled, the overlay will be bundled into the executable.
single-executable = []
# When enabled, the executable will be compiled with the WINDOWS subsytem
# over the default CONSOLE subsystem.
win32-executable = []
default = ["single-executable", "win32-executable"]

[[bin]]
name = "current-song2"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.30", features = ["sync", "fs"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"

actix = "0.13"
actix-web = { version = "4.3", features = ["compress-brotli"] }
actix-files = "0.6"
actix-web-actors = "4.2"
actix-cors = "0.6"
actix-web-static-files = "4.0"
static-files = "0.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"

anyhow = "1.0"
lazy_static = "1.4"
tap = "1.0"
thiserror = "1.0"

tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-actix-web = "0.7"
tracing-actix = "0.4"
tracing-appender = "0.2"

[target.'cfg(windows)'.dependencies]
win-gsmtc = { path = "lib/win-gsmtc" }
win-wrapper = { path = "lib/win-wrapper" }
windows = "0.48"

[build-dependencies]
actix-web-static-files = "4.0"
