[package]
name = "win-gsmtc"
version = "0.1.0"
edition = "2021"

[lib]
name = "gsmtc"
path = "src/lib.rs"

[features]
default = []

[dependencies]
tokio = { version = "1.28", features = ["sync", "macros"] }
windows = { version = "0.48", features = ["Media_Control", "Foundation", "Foundation_Collections", "Storage_Streams", "Win32_Foundation"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"], optional = true }
tap = "1.0"
