[package]
name = "win-gsmtc"
version = "0.1.0"
edition = "2021"
description = "A wrapper around the Windows.Media.Control namespace (GlobalSystemMediaTransportControls - GSMTC)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nerixyz/current-song2"
keywords = ["windows", "winrt", "gsmtc", "media"]
categories = ["os::windows-apis", "multimedia"]
readme = "README.md"

[lib]
name = "gsmtc"
path = "src/lib.rs"

[features]
default = []

[dependencies]
tokio = { version = "1.46", features = ["sync", "macros", "rt"] }
windows = { version = "0.61", features = ["Media_Control", "Foundation", "Foundation_Collections", "Storage_Streams", "Win32_Foundation"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"], optional = true }
tap = "1.0"

[dev-dependencies]
tokio = { version = "1.46", features = ["sync", "macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
