[package]
name = "win-wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.43", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus"
] }
